--- a/css/style.css
+++ b/css/style.css
@@ -381,6 +381,15 @@ header{
      font-size: 26px;
      font-weight: 500;
 }
+.section-title h3{
+    font-family: "Laila", serif;
+    font-size: 60px;
+    font-weight: 700;
+    color: #154270;
+}
+.happy-with-us-section{
+    padding: 100px 0px;
+}
 @media only screen and (min-width: 1920px){
 
     .container-fluid{
