--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ header form button{
     padding: 5px 20px;
     font-weight: 600;
     position: relative;
+    text-align: center;
 }
 .navbar-expand-md .navbar-nav .nav-link:before{
     content: "";
@@ -118,7 +119,7 @@ header{
 }
 .banner-section p{
     font-size: 18px;
-    line-height: 20px;
+    line-height: 26px;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     margin: 20px 0px;
@@ -198,6 +199,7 @@ header{
     margin-bottom: 0px;
     font-size: 16px;
     color:#463933;
+    margin-right: 40px;
 }
 .service-box{
     position: relative;
@@ -264,10 +266,22 @@ header{
     width: 50%;
     float: left;
     margin-bottom: 25px;
+    position: relative;
+    padding-left: 50px;
+    height: 36px;
+    line-height: 19px;
 }
-.we-love-text ul li a{
-    text-transform: none;
+.we-love-text ul li:before{
+    content: "";
+    width: 35px;
+    height: 36px;
+    background-image: url("../images/tick.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position:absolute;
+    left: 0px;
 }
+
 .we-love-text h3{
     font-family: "Laila", serif;
     font-size: 60px;
@@ -288,7 +302,12 @@ header{
     color: #154270;
     font-family: "Roboto", sans-serif;
     font-weight: 700;
-    margin-left: 10px;
+    margin-left: 0px;
+    margin-top: 5px;
+    display: inline-block;
+}
+.we-love-text ul li i{
+    display: inline-block;
 }
 .we-love-text .btn.btn-style{
     background-color: transparent;
@@ -502,6 +521,14 @@ header{
     margin-bottom: 5px;
     letter-spacing: 1px;
 }
+.our-reviews-section{
+    position: relative;
+}
+.our-reviews-section .owl-nav{
+    position: absolute;
+    top: -150px;
+    right: 0px;
+}
 .our-reviews-section .section-title{
     margin-bottom: 60px;
 }
@@ -523,9 +550,182 @@ header{
     background-image: url(../images/arr-right-blu.png);
     background-repeat: no-repeat;
 }
-.our-reviews-section .owl-nav .owl-prev span {
+.our-reviews-section .owl-nav .owl-prev span{
     background-image: url(../images/arr-left-blu.png);
     background-repeat: no-repeat;
+}
+.subscribe-title{
+    display: flex;
+    align-items: center;
+}
+.subscribe-title i{
+    margin-right: 30px;
+    flex-shrink: 0;
+}
+.subscribe-title h6{
+    font-family: "Laila", serif;
+    font-size: 42px;
+    font-weight: 700;
+    line-height: 52px;
+    color: #ffffff;
+}
+.newsletter-wrap{
+    background-image: url("../images/newsletter-bg.jpg");
+    padding: 60px;
+    border-radius: 30px;
+    background-size: cover;
+}
+.subscribe-form-style input{
+    border-radius: 50px;
+    border: 0px;
+    height: 65px;
+    padding: 0px 30px;
+}
+.subscribe-form-style{
+    margin: 0px;
+    position: relative;
+    padding: 0px;
+}
+.subscribe-form-style .btn{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    height: 65px;
+    border-radius: 50px;
+    min-width: 200px;
+}
+.footer-blue-part{
+    background-color: #154270;
+    padding: 35px 0px;
+}
+.footer-blue-part ul{
+    margin: 13px 0px;
+    padding: 0px;
+}
+.footer-blue-part ul li{
+    list-style: none;
+    display: inline-block;
+    position: relative;
+}
+.footer-blue-part ul li a{
+    color: #ffffff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: "Laila", serif;
+    font-size: 13px;
+    margin: 0px 20px;
+}
+.footer-blue-part ul li:before{
+    content: "";
+    width: 5px;
+    height: 5px;
+    border-radius: 50px;
+    background-color: #e94241;
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+}
+.footer-blue-part ul li:last-child:before{
+    display: none;
+}
+.icon-link-group .phone-no{
+    margin-left: 20px;
+    margin-right: 0px;
+}
+.icon-link-group .phone-no a{
+    color: #ffffff;
+    font-size: 15px;
+}
+.white-footer{
+    background-color: #ffffff;
+    background-image: url("../images/paw-bg.jpg");
+    background-repeat: no-repeat;
+    background-position: left top;
+    padding-top: 60px;
+    padding-bottom: 30px;
+}
+.social-links ul{
+    margin: 0px;
+    padding: 0px;
+}
+.social-links ul li{
+    list-style: none;
+    border: 1px solid #154270;
+    width: 40px;
+    height: 40px;
+    border-radius: 100px;
+    text-align: center;
+    padding: 5px;
+    display: inline-block;
+    margin-right: 6px;
+}
+.social-links{
+    margin-top: 20px;
+}
+.social-links ul li a{
+    text-decoration: none;
+    color: #154270;
+    font-size: 20px;
+}
+.footer-left-side{
+    display: flex;
+    align-items: end;
+}
+.footer-title{
+    color: #154270;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 42px;
+    font-family: "Laila", serif;
+    margin-bottom: 40px;
+}
+.footer-links h6{
+    font-size: 16px;
+    font-family: "Laila", serif;
+    color: #EA4142;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+.footer-links ul{
+    margin: 0px;
+    padding: 0px;
+}
+.footer-links ul li{
+    list-style: none;
+    margin-bottom: 5px;
+}
+.footer-links ul li a , .footer-links a{
+    text-decoration: none;
+    color: #767676;
+    font-size: 15px;
+}
+.footer-links ul li a:hover{
+    color: #EA4142;
+}
+.terms-con a{
+    text-decoration: none;
+    color: #154270;
+    font-size: 14px;
+    line-height: 16px;
+}
+.terms-con i{
+    font-style: normal;
+    margin: 0px 10px;
+}
+.copyright p{
+    text-decoration: none;
+    color: #154270;
+    font-size: 14px;
+    text-align: right;
+    margin: 0px;
+}
+.seprator{
+    margin: 30px 0px;
+}
+.arrow-down{
+    display: block;
 }
 @media only screen and (min-width: 1920px){
 
@@ -541,7 +741,372 @@ header{
 }
 @media only screen and (max-width:1440px){
 
+    header .phone-no{
+        display: none;
+    }
 }
 @media only screen and (max-width:1199px){
 
+    .navbar-expand-md .navbar-nav .nav-link{
+        padding: 5px 15px;
+    }
+    .navbar-brand{
+        width: 260px;
+    }
+    .users-rating .users-rating-img{
+        width: 140px;
+    }
+    .video-link-img{
+        width: 140px;
+    }
+    .service-item-title h3{
+        font-size: 22px;
+    }
+    .service-item-title{
+        margin-top: -102px;
+    }
+    .white-footer .d-flex{
+        flex-direction: column;
+    }
+    .copyright p{
+        text-align: left;
+    }
+}
+@media only screen and (max-width:1024px){
+
+    .banner-section h1{
+        font-size: 80px;
+        line-height: 100px;
+    }
+    .marquee-section h2{
+        font-size: 80px;
+        line-height: 80px;
+    }
+    .high-quality-content h2{
+        font-size: 50px;
+    }
+    .section-title h3{
+        font-size: 50px;
+    }
+    .subscribe-title h6{
+        font-size: 38px;
+        line-height: 48px;
+    }
+}
+@media only screen and (max-width:991px){
+
+    .banner-section h1{
+        font-size: 70px;
+        line-height: 90px;
+    } 
+    .banner-section{
+        padding: 100px 0px;
+    }  
+    .users-rating{
+        flex-direction: column;
+        align-items: flex-start;
+    } 
+    .video-link.users-rating{
+        flex-direction: column-reverse;
+        align-items: end;
+    }
+    .video-link.users-rating p{
+        margin-right: 0px;
+        margin-top: 10px;
+        text-align: right;
+    }
+    .users-rating .users-rating-img{
+        margin-bottom: 10px;
+    }
+    .service-box{
+        margin-bottom: 40px;
+        height: auto;
+    }
+    .service-section-wrapper {
+        padding: 100px 0px 60px;
+    }
+    .happy-clients-box{
+        margin-bottom: 40px;
+    }
+    .we-love-text h3{
+        font-size: 50px;
+    }
+    .marquee-section h2{
+        font-size: 70px;
+        line-height: 70px;
+    }
+    .dog-image{
+        margin: 20px 0px;
+    }
+    .happy-with-us-section{
+        padding: 80px 0px;
+    }
+    .meet-team-section .row{
+        flex-direction: column;
+    }
+    .meet-team-section .col{
+        margin-bottom: 40px;
+    }
+    .space-top-bottom-100{
+        padding: 60px 0px;
+    }
+    .imgholder{
+        margin-bottom: 30px;
+    }
+    .subscribe-title{
+        margin-bottom: 40px;
+    }
+    .footer-blue-part ul{
+        text-align: center;
+    }
+    .footer-blue-part .justify-content-end{
+        justify-content: center !important;
+    }
+    .footer-left-side{
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 60px;
+    }
+    .footer-title{
+        text-align: center;
+    }
+    .white-footer .d-flex{
+        align-items: center;
+    }
+    .dog-image{
+        text-align: center;
+    }
+    .section-title h3 {
+        font-size: 45px;
+    }
+    .happy-with-us-section .section-title {
+        margin-bottom: 60px;
+    }
+    header form.d-flex{
+        display: none !important;
+    }
+    .high-quality-content h2 {
+        font-size: 40px;
+    }
+    .subscribe-title h6 {
+        font-size: 32px;
+        line-height: 42px;
+    }
+}
+@media only screen and (max-width:767px){
+
+    .spaceleft-right {
+        padding: 0px 15px;
+    }
+    .video-link.users-rating p{
+        text-align: center;
+    }
+    .navbar-toggler-icon i{
+        display: inline-block;
+        padding: 5px 0px;
+        color: #ffffff;
+    }
+    .navbar-toggler{
+        border: 1px solid #154270;
+        background-color: #154270;;
+    }
+    .navbar-toggler:focus{
+        box-shadow: none;
+    }
+    .navbar-expand-md .navbar-nav .nav-link:before{
+        display: none;
+    }
+    .navbar-expand-md .navbar-nav .nav-link {
+        padding: 15px;
+    }
+    .banner-section {
+        padding: 80px 0px;
+    }
+    .banner-section h1{
+        font-size: 60px;
+        line-height: 80px;
+    }
+    .banner-section h1 br{
+        display: none;
+    }
+    .users-rating{
+        align-items: center;
+        margin-bottom: 30px;
+    }
+    .video-link.users-rating{
+        align-items: center;
+        margin-top: 30px;
+        margin-bottom: 10px;
+    }
+    .banner-section-bottom{
+        padding: 100px 0px 40px;
+    }
+    .high-quality-content{
+        padding-left: 20px;
+    }
+    .high-quality-services .owl-nav {
+        position: absolute;
+        top: -110px;
+        right: 30%;
+    }
+    .marquee-section h2 {
+        font-size: 60px;
+        line-height: 60px;
+    }
+    .service-section-wrapper{
+        padding: 60px 0px 40px;
+    }
+    .we-love-text h3 {
+        font-size: 40px;
+    }
+    .section-title h3 {
+        font-size: 40px;
+    }
+    .imgholder{
+        text-align: center;
+    }
+    .images-group-section.space-top-bottom-100{
+        padding-top: 30px;
+    }
+    .footer-links{
+        margin-bottom: 40px;
+    }
+    .we-love-text ul li{
+        width: 100%;
+    }
+    .seprator {
+        margin: 0px 0px 30px;
+    }
+    .copyright p {
+        text-align: center;
+    }
+    .high-quality-services .owl-carousel{
+        margin-left: 30px;
+    }
+    .service-item-title {
+        margin-top: 20px;
+        padding: 0px;
+    }
+    .service-item-title i{
+        width: 30px;
+    }
+    .service-item-title h3 {
+        font-size: 18px;
+    }
+    .high-quality-services .owl-nav{
+        position: static;
+        margin-top: 20px;
+    }
+    .high-quality-services{
+        padding: 80px 0px 60px;
+    }
+    .feature-box {
+        flex-direction: column;
+        align-items: center;
+    }
+    .feature-box-text{
+        text-align: center;
+        margin-top: 20px;
+    }
+    .we-love-text {
+        margin-left: 0px;
+    }
+    .our-reviews-section .owl-nav{
+        position: static;
+    }
+    .spaceleft-right-30 {
+        padding: 0px 15px;
+    }
+}
+@media only screen and (max-width:575px){
+
+    .navbar-brand {
+        width: 150px;
+    }
+    .service-box-title h4{
+        font-size: 23px;
+    }
+    .subscribe-title{
+        flex-direction: column;
+    }
+    .newsletter-wrap{
+        padding: 40px 20px;
+    }
+    .subscribe-title h6 {
+        font-size: 30px;
+        line-height: 38px;
+        text-align: center;
+        margin: 20px 0px 0px;
+    }
+    .subscribe-title i{
+        margin-right: 0px;
+    }
+    .subscribe-form-style .btn{
+        position: static;
+    }
+    .subscribe-form-style input{
+        height: 60px;
+    }
+    .subscribe-form-style .btn{
+        height: 60px;
+        margin-top: 20px;
+    }
+    .subscribe-form-style{
+        text-align: center;
+    }
+    .footer-blue-part ul li a{
+        margin: 0px 6px;
+    }
+    .footer-blue-part ul li:before{
+        right: -4px;
+    }
+    .footer-blue-part .justify-content-end{
+        flex-direction: column;
+    }
+    .icon-link-group .phone-no {
+        margin-left: 0px;
+        margin-bottom: 15px;
+    }
+    .footer-menu{
+        margin-bottom: 30px;
+    }
+    .phone-no.email-link{
+        margin-bottom: 0px ;
+    }
+    .footer-left-side{
+        flex-direction: column;
+    }
+    .footer-left-side{
+        margin-bottom: 20px;
+    }
+    .footer-title{
+        font-size: 26px;
+        line-height: 36px;
+    }
+    .footer-links{
+        text-align: center;
+    }
+    .high-quality-content h2 {
+        font-size: 35px;
+        margin-bottom: 40px;
+    }
+    .service-item-title i{
+        display: none;
+    }
+    .section-title h3 {
+        font-size: 35px;
+    }
+    .happy-with-us-section .section-title {
+        margin-bottom: 40px;
+    }
+    .banner-section h1 {
+        font-size: 35px;
+        line-height: 48px;
+    }
+    .banner-section{
+        padding: 40px 0px 30px;
+    }
+    .happy-clients-no h3{
+        font-size: 50px;
+    }
 }
