--- a/css/style.css
+++ b/css/style.css
@@ -1017,6 +1017,9 @@ header{
     .spaceleft-right-30 {
         padding: 0px 15px;
     }
+    .users-rating p{
+        text-align: center;
+    }
 }
 @media only screen and (max-width:575px){
 
