--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ header{
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     margin: 20px 0px;
+    color: #ffffff;
 }
 .btn.btn-style.btn-white{
     background-color: #ffffff;
