--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@ body{
     background-color: #f7f3eb;
     font-family: "Outfit", sans-serif;
 }
+.btn-check:focus+.btn, .btn:focus {
+    outline: none !important;
+    box-shadow: none !important;
+}
 .spaceleft-right{
     padding: 0px 60px;
 }
