--- a/css/style.css
+++ b/css/style.css
@@ -916,6 +916,27 @@ textarea.form-control.field-style{
     width: 100%;
     height: 710px;
 }
+.banner-section.blog-detail-page h1{
+    font-size: 45px;
+}
+.blog-text{
+    margin-top:60px;
+}
+.blog-text p{
+    margin-bottom: 20px;
+}
+.blog-text h4 {
+    font-size: 40px;
+}
+.blog-text-title{
+    margin-bottom: 30px;
+}
+.blog-text-title p{
+    color: #E94241;
+    font-size: 16px;
+    line-height: 18px;
+    margin-bottom: 15px;
+}
 @media only screen and (min-width: 1920px){
 
     .container-fluid{
@@ -1111,7 +1132,13 @@ textarea.form-control.field-style{
     }
 }
 @media only screen and (max-width:767px){
-
+    
+    .blog-text {
+        margin-top: 30px;
+    }
+    .blog-text h4{
+        font-size: 30px;
+    }
     .iframe-wrapper iframe{
         height: 510px;
     }
@@ -1275,7 +1302,9 @@ textarea.form-control.field-style{
     }
 }
 @media only screen and (max-width:575px){
-
+    p{
+        font-size: 18px;
+    }
     .iframe-wrapper{
         margin-top: 20px;
     }
