--- a/css/style.css
+++ b/css/style.css
@@ -878,6 +878,7 @@ a.blog-thumbnail-wrapper{
 }
 textarea.form-control.field-style{
     height: 154px;
+    margin-bottom: 30px;
 }
 .contact-page-content .btn.btn-style{
     margin-top: 40px;
